--- a/package.json
+++ b/package.json
@@ -10,18 +10,25 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@ant-design/cssinjs": "^1.18.2",
     "@ant-design/nextjs-registry": "^1.0.1",
     "@material-tailwind/react": "^2.1.10",
     "antd": "^5.21.2",
+    "lazyframe": "^2.2.7",
+    "lite-youtube-embed": "^0.3.3",
     "next": "^14.2.14",
     "next-images": "^1.8.5",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-icons": "^5.3.0"
+    "react-icons": "^5.3.0",
+    "react-lite-youtube-embed": "^2.4.0",
+    "react-player": "^2.16.0",
+    "rimraf": "^4",
+    "webpack": "^5"
   },
   "devDependencies": {
     "daisyui": "^4.12.11",
-    "eslint": "^9.11.1",
+    "eslint": "^8",
     "eslint-config-next": "14.2.13",
     "postcss": "^8",
     "tailwindcss": "^3.4.1"
