--- a/package.json
+++ b/package.json
@@ -13,12 +13,16 @@
     "@ant-design/cssinjs": "^1.18.2",
     "@ant-design/nextjs-registry": "^1.0.1",
     "@material-tailwind/react": "^2.1.10",
+    "@reduxjs/toolkit": "^2.2.7",
     "antd": "^5.21.2",
+    "axios": "^1.7.7",
     "next": "^14.2.14",
     "next-images": "^1.8.5",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
+    "react-redux": "^9.1.2",
+    "redux-persist": "^6.0.0",
     "rimraf": "^4",
     "webpack": "^5"
   },
